Add: setting files

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^3.3.2"
+    "astro": "^3.3.2",
+    "microcms-js-sdk": "^2.7.0",
+    "swiper": "^10.3.1"
   }
 }
